--- a/Mod2_Solution/index.html
+++ b/Mod2_Solution/index.html
@@ -7,24 +7,31 @@
         <link rel="stylesheet" href="css/stylesheet.css"/>
     </head>
     <body>
-        <div class="row" style="background:red">
-            <div class="col-lg-3 col-md-4 lightgoldenrodyellow summarySection">
-                <p>The Fellowship of the Ring</p>              
-                <p>
-                    An ancient Ring thought lost for centuries has been found, and through a strange twist in fate has been given to a small Hobbit named Frodo. When Gandalf discovers the Ring is in fact the One Ring of the Dark Lord Sauron, Frodo must make an epic quest to the Cracks of Doom in order to destroy it! However he does not go alone. He is joined by Gandalf, Legolas the elf, Gimli the Dwarf, Aragorn, Boromir and his three Hobbit friends Merry, Pippin and Samwise. Through mountains, snow, darkness, forests, rivers and plains, facing evil and danger at every corner the Fellowship of the Ring must go. Their quest to destroy the One Ring is the only hope for the end of the Dark Lords reign!
-                </p>                
-            </div>
-            <div class="col-lg-3 col-md-4 lightskyblue summarySection">
-                <p>The Fellowship of the Ring</p>              
-                <p>
-                    An ancient Ring thought lost for centuries has been found, and through a strange twist in fate has been given to a small Hobbit named Frodo. When Gandalf discovers the Ring is in fact the One Ring of the Dark Lord Sauron, Frodo must make an epic quest to the Cracks of Doom in order to destroy it! However he does not go alone. He is joined by Gandalf, Legolas the elf, Gimli the Dwarf, Aragorn, Boromir and his three Hobbit friends Merry, Pippin and Samwise. Through mountains, snow, darkness, forests, rivers and plains, facing evil and danger at every corner the Fellowship of the Ring must go. Their quest to destroy the One Ring is the only hope for the end of the Dark Lords reign!
+        <h1 class="pageTitle"> The Lord Of The Rings</h1>
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="innerDiv lightgoldenrodyellow">
+                <p class="sectionTitle lightseagreen">The Fellowship of the Ring</p>              
+                <p class="sectionText">
+                    &quot;The future of civilization rests in the fate of the One Ring, which has been lost for centuries. Powerful forces are unrelenting in their search for it. But fate has placed it in the hands of a young Hobbit named Frodo Baggins (Elijah Wood), who inherits the Ring and steps into legend. A daunting task lies ahead for Frodo when he becomes the Ringbearer - to destroy the One Ring in the fires of Mount Doom where it was forged.&quot; - (Google Search)
                 </p> 
+                </div>               
             </div>
-            <div class="col-lg-3 col-md-12 lightslategray summarySection">
-                <p>The Fellowship of the Ring</p>              
-                <p>
-                    An ancient Ring thought lost for centuries has been found, and through a strange twist in fate has been given to a small Hobbit named Frodo. When Gandalf discovers the Ring is in fact the One Ring of the Dark Lord Sauron, Frodo must make an epic quest to the Cracks of Doom in order to destroy it! However he does not go alone. He is joined by Gandalf, Legolas the elf, Gimli the Dwarf, Aragorn, Boromir and his three Hobbit friends Merry, Pippin and Samwise. Through mountains, snow, darkness, forests, rivers and plains, facing evil and danger at every corner the Fellowship of the Ring must go. Their quest to destroy the One Ring is the only hope for the end of the Dark Lords reign!
+            <div class="col-lg-4 col-md-6">
+                <div class="innerDiv lightskyblue">
+                <p class="sectionTitle lightcoral">The Two Towers</p>              
+                <p class="sectionText">
+                    &quot;The sequel to the Golden Globe-nominated and AFI Award-winning &quot;The Two Towers&quot; follows the continuing quest of Frodo and the Fellowship to destroy the One Ring. Frodo and Sam (Sean Astin)  discover they are being followed by the mysterious Gollum. Aragorn, the Elf archer Legolas and Gimli the Dwarf encounter the besieged Rohan kingdom, whose once great King Theoden has fallen under Saruman's deadly spell.&quot; - (Google Search)
                 </p> 
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12">
+                <div class="innerDiv lightslategray">
+                <p class="sectionTitle white">The Return of the King</p>              
+                <p class="sectionText">
+                    &quot;The culmination of nearly 10 years' work and conclusion to Peter Jackson's epic trilogy based on the timeless J.R.R. Tolkien classic, &apos;The Return of the King&apos; presents the final confrontation between the forces of good and evil fighting for control of the future of Middle-earth. Hobbits Frodo and Sam reach Mordor in their quest to destroy the &apos;one ring&apos;, while Aragorn leads the forces of good against Sauron&apos;s evil army at the stone city of Minas Tirith.&quot; - (Google Search)
+                </p> 
+                </div>
             </div>
         </div>              
     </body>
