--- a/Mod4_Solution/index.html
+++ b/Mod4_Solution/index.html
@@ -8,8 +8,7 @@
   </script>
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
-  <!--<script src="script.js"></script>-->
-</head>
+  <script src="script.js"></script></head>
 <body>
   <h1>Module 4 Solution Starter</h1>
 </body>
